// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown/presenters/OptionPresenter renders with all props 1`] = `
.emotion-1 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: rgb(230,244,251);
}

.emotion-0 {
  fill: #087AAD;
}

.emotion-0 > * {
  fill: #087AAD;
}

<div
  aria-selected={true}
  className="emotion-1"
  id={undefined}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  role="option"
  tabIndex="0"
>
  <span
    className="hig__dropdown-option__label"
  >
    <p>
      hi
    </p>
  </span>
  <div
    className="hig__dropdown-option__checkmark"
  >
    <svg
      className="emotion-0"
      color="#087AAD"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.18 16L6 12.113l1.296-1.292 2.861 2.644L16.679 7 18 8.268z"
        fill="#087AAD"
        fillRule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Dropdown/presenters/OptionPresenter renders without props 1`] = `
.emotion-0 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

<div
  aria-selected={undefined}
  className="emotion-0"
  id={undefined}
  onClick={undefined}
  onKeyDown={undefined}
  onMouseDown={undefined}
  onMouseMove={undefined}
  role="option"
  tabIndex="0"
>
  <span
    className="hig__dropdown-option__label"
  />
</div>
`;
